# projeto-fgv-similaridade

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/eval/: gold_standard_template.csv
deploy/: build_push.sh
docs/: ROADMAP_FINETUNING.txt
notebooks/: 0.padronizar_dados.ipynb  1.embeddings.ipynb  2.similarity_search.ipynb  README.md
scripts/: seed_snowflake.py
src/: config.py  data_process.py  evaluation.py  feedback.py  knowledge_base.py  penalty.py  similarity.py  snowflake_io.py
streamlit_app/: services.py
tests/: test_penalty.py
