[project]
name = "projeto-fgv-similaridade"
version = "2.0.0"
description = "Sistema de busca de insumos por similaridade semântica (SBERT + KNN + penalização) com captura de feedback para fine-tuning."
requires-python = ">=3.11"
authors = [
    { name = "Felipe Fortunato" },
]
readme = "README.md"

# Dependências reais ficam em requirements.txt para compatibilidade com
# Streamlit Community Cloud (que prefere requirements.txt sobre pyproject).

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length warnings — handled by formatter

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["E", "F", "W"]   # notebooks ficam fora do lint

[tool.ruff.format]
quote-style = "double"
